--- a/README
+++ b/README
@@ -7,10 +7,5 @@ pf
 NET => 
 DNS - Domain Node Service = { node{port} = ; }
 
-
-node[port] = '';
-
-DNS{node[]};
-node[] = "port port port";
-or
-node{$port} = $service[$[port]];
+@service[$port] = $service;
+node{$service[$port]} = $service;
