--- a/README
+++ b/README
@@ -12,8 +12,10 @@ ROTOPSK - Reciever One Time Only PreShared Key
 OTOPSK - One Time Only PreShared Key
   ip4{port} = $usr_key
   
+  SOTOPSK = usb -> host$usr_s
+  ROTOPSK = usb -> host$usr_r
+  
   fred -> usb -> host$usr_s
-  usb -> host$usr_r
   
   {$ip4{$port} = $usr_key
   fred -> 11101@0.6.6.6:6663
