--- a/README
+++ b/README
@@ -11,15 +11,13 @@ SOTOPSK - Sender One Time Only PreShared Key
 ROTOPSK - Reciever One Time Only PreShared Key
 OTOPSK - One Time Only PreShared Key
 USB - KRIP SICC Datablocks 
-
-  ip4{port} = $usr_key
-  
+# INTRO #################
   SOTOPSK = usb -> host$usr_s
   ROTOPSK = usb -> host$usr_r
   
-  fred -> usb -> host$usr_s
+  usr -> usb -> host$usr_s
   
-  {$ip4{$port} = $usr_key
+  $ip4{$port} = $usr_key
   
   fred -> SOTOPSK -> 11101@0.6.6.6:6663
   fred <- 11101@0.6.6.6:3666 <-ROTOPSK_PACKET <- service
