--- a/README
+++ b/README
@@ -15,8 +15,8 @@ USB - KRIP SICC Datablocks
   SOTOPSK = usb -> host$usr_s
   ROTOPSK = usb -> host$usr_r
   
-  usr -> usb -> ip4{$port} 
-  $ip4{$port} = $usr_key
+  usr -> usb -> SICC -> SOTOPSK -> ip4{$port}
+  usr <- usb <- SICC <- ip4{$port} <- ROTOPSK <- service
   
   fred -> SOTOPSK -> 11101@0.6.6.6:6663
   fred <- 11101@0.6.6.6:3666 <- ROTOPSK <- service
