--- a/README
+++ b/README
@@ -16,7 +16,7 @@ USB     - KRIP SICC Datablocks
   ROTOPSK = usb -> host$usr_r
   
   usr -> usb -> SICC -> SOTOPSK -> ip4{$port}
-  usr <- usb <- SICC <- ip4{$port} <- ROTOPSK <- service
+  SICC <- usb <- usr <- ip4{$port} <- ROTOPSK <- service
   
   fred -> SOTOPSK -> 11101@0.6.6.6:6663
   fred <- 11101@0.6.6.6:3666 <- ROTOPSK <- service
