--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 #########################
-# KERN - unix kernel
+# KERN - persistent unix kernel
   [0] KERN.CONF 
   [1] buildworld
   [2] jail
@@ -7,7 +7,6 @@
   [5] udp
 #########################
 # FREEBSD ANONI JAIL GATE
-
 KERN.CONF  - sha signed kernel build
 buildworld - FreeBSD world build
 pf.conf    - pf configuration
@@ -19,6 +18,9 @@ OTOPSK     - One Time Only PreShared Key, data that is scrubbed after being OTO
 USB        - KRIP SICC Datablocks 
 UDP        - protocol of udp transmission
 # INTRO #################
+unix kernels are always adapting new versions
+A persistent kernel is a computer build that will never update
+
   SOTOPSK = usb -> host$usr_s
   ROTOPSK = usb -> host$usr_r
   
