--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 #########################
 # KERN - persistent unix kernel
+A persistent kernel computer build that will never update
+#########################
   [0] KERN.CONF 
   [1] buildworld
   [2] jail
@@ -18,9 +20,6 @@ OTOPSK     - One Time Only PreShared Key, data that is scrubbed after being OTO
 USB        - KRIP SICC Datablocks 
 UDP        - protocol of udp transmission
 # INTRO #################
-unix kernels are always adapting new versions
-A persistent kernel is a computer build that will never update
-
   SOTOPSK = usb -> host$usr_s
   ROTOPSK = usb -> host$usr_r
   
